Fix deployment configuration
 Deployment fixes:
- Moved Dockerfile back to root directory (required by most deployment platforms)
- Copied docker-compose.yml to root for easier development
- Updated render.yaml to point to correct repository URL
- Fixed dockerfilePath in deployment configuration

 Changes:
- Dockerfile: Now in root directory for deployment compatibility
- docker-compose.yml: Available in root for local development
- render.yaml: Updated repository URL and paths
- Maintains deploy/ directory for organized deployment files

This fixes the 'failed to read dockerfile' error during deployment.

--- a/deploy/render.yaml
+++ b/deploy/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: metabolical-backend
     env: docker
-    repo: https://github.com/ankit21311/BackEnd-Nexus3p.org
+    repo: https://github.com/ankit21311/METABOLIC_BACKEND
     branch: main
     dockerfilePath: ./Dockerfile
     envVars:
