Fix summary field issue in scrapers and API
 Summary fixes:
- Fixed scraper to use 'summary' field instead of 'description'
- Updated master_health_scraper.py to save summaries correctly
- Fixed INSERT queries to use correct database schema
- Updated CORS origins in render.yaml for frontend compatibility

 Root cause identified:
- Scraper was saving to 'description' field
- API was reading from 'summary' field
- Recent articles had empty summaries due to field mismatch
- Older articles had summaries from previous scrapers

 Testing confirmed:
- Database operations work correctly with summary field
- API retrieves and processes summaries properly
- Search and category filtering return proper summaries
- JSON serialization includes summary data

This fixes the frontend not receiving summary data properly.

--- a/deploy/render.yaml
+++ b/deploy/render.yaml
@@ -15,7 +15,7 @@ services:
       - key: RENDER
         value: true
       - key: CORS_ORIGINS
-        value: "https://your-frontend-domain.com,https://localhost:3000,http://localhost:3000,https://localhost:5173,http://localhost:5173"
+        value: "https://metabolical.in,https://www.metabolical.in,https://localhost:3000,http://localhost:3000,https://localhost:5173,http://localhost:5173"
     healthCheckPath: /api/v1/health
     plan: starter  # Change to 'standard' or higher for production
     autoDeploy: true
