Implement Automatic Background Scheduler for Health News Scraping
 Features Added:
- Automatic scheduler integrated with FastAPI using APScheduler
- Background health news scraping every 6 hours
- Daily database cleanup at 2:00 AM
- Immediate scraping on server startup
- Python 3.13 compatible fallback scraper
- Scheduler management API endpoints

 New Files:
- app/scheduler.py: Main scheduler implementation with APScheduler
- app/scrapers/simple_compatible_scraper.py: Python 3.13 compatible scraper
- scripts/check_scheduler_status.py: Comprehensive scheduler status checker
- scripts/demonstrate_auto_startup.py: Automatic startup demonstration
- scripts/test_scheduler_integration.py: Integration testing
- scripts/scheduler_setup_complete.py: Final setup verification

 Modified Files:
- app/main.py: Added scheduler integration with startup/shutdown events
- requirements.txt: Added APScheduler and web scraping dependencies

 Key Benefits:
- NO manual intervention required - fully automatic
- Scheduler starts/stops with API server automatically
- Graceful error handling and fallback mechanisms
- Real-time monitoring via API endpoints
- Compatible with Python 3.13

 Usage:
Simply run 'python run.py api' and scheduler starts automatically!
Monitor at: http://localhost:8000/api/v1/scheduler/status

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,15 @@ httpx==0.25.2
 # Production server enhancements
 gunicorn==21.2.0
 
+# Scheduling and background tasks
+apscheduler==3.10.4
+
+# Web scraping dependencies
+requests==2.31.0
+beautifulsoup4==4.12.2
+feedparser==6.0.10
+lxml==4.9.3
+
 # Development and testing (optional)
 pytest==7.4.3
 pytest-asyncio==0.21.1
