--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,14 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Database files
+*.db
+*.db-journal
+*.sqlite
+*.sqlite3
+data/articles.db
+
+# Test files
+test_*.py
+*_test.py
